--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -2,6 +2,10 @@ name: Build pages
 on: [push]
 jobs:
   deploy:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{steps.deployment.outputs.page_url}}
