--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/js-yaml": "^4.0.9",
     "js-yaml": "^4.1.0",
     "vue": "^3.4.21",
+    "vue-inline-svg": "^3.1.3",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
@@ -28,9 +29,11 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.1.2",
+    "sass-embedded": "^1.77.8",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vue-tsc": "^2.0.11"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
