--- a/src/assets/case-studies/SLZ.yaml
+++ b/src/assets/case-studies/SLZ.yaml
@@ -2,16 +2,15 @@ title: SLZ
 url: SLZ
 colors:
   accent: "034FE4"
+  accent-light: "F2F7FF"
   boxes: "151E2C"
   subtitle: "395996"
-  icon-primary: "FFCE31"
-  icon-secondary: "C79127"
 header:
   title: Smart Loading Zones
   description: Improving Accessibility Outcomes in Transportation Services Across Pittsburgh, PA 
   image: images/Frame31.svg
 sections: 
-  - title: Overview
+  - title: Overview 
     data:
       - type: paragraph
         data: | 
@@ -28,9 +27,14 @@ sections:
             points, identify high-priority areas of improvement, and propose solutions to better the overall user
             experience
             of SLZs.
+
+      - type: image
+        data: "images/Group 268.svg"
       - type: grid
         data:
           - type: grid-item
+            color: "#7B6251"
+            text-color: white
             data:
               - type: subtitle
                 data: Role
@@ -39,6 +43,7 @@ sections:
                 data: UX Researcher & Designer
 
           - type: grid-item
+            color: "#B2A49A"
             data:
               - type: subtitle
                 data: Client
@@ -47,6 +52,7 @@ sections:
                 data: City of Pittsburgh
 
           - type: grid-item
+            color: "#7B6251"
             data:
               - type: subtitle
                 data: Project Timeline
@@ -55,6 +61,7 @@ sections:
                 data: Aug 2023 - Dec 2023
 
           - type: grid-item
+            color: "#B2A49A"
             data:
               - type: subtitle
                 data: Teammates
@@ -64,6 +71,32 @@ sections:
                       Erin Sawyer
                       Gaurav Nemade
                       Justine Chou
+
+      - type: grid
+        color: blue
+        data:
+          - type: grid-item
+            text-color: white
+            data:
+              - type: numbers
+                data: 01
+                
+              - type: sub-header
+                data: Knowledge v. Desire
+
+              - type: paragraph
+                data: |
+                  Adult children have a high willingness to support their aging parents but low awareness of how to help, pinpointing a critical area for educational interventions.
+ 
+          - type: grid-item
+            data:
+              - type: image
+                data: images/soemthing.png
+                
+              - type: caption
+                data: |
+                  Questions were coded with whether they measure “willingness” or “awareness.” Averages were computed based on responses given on a 5-point Likert scale.
+
 
       - type: subtitle
         data: Methods
@@ -86,18 +119,16 @@ sections:
               - type: paragraph
                 data: Figma / Usability Testing
 
-      - type: important
-        title: Context
-        data:
-          - type: image
-            data: context
-
-          - type: callout
-            data: | 
-              Designated by purple curbs, SLZs employ innovative camera technology to read license plates and analyze
-              real-time curbside activity, automating payment for the time a vehicle spends at a purple curb. Registered
-              users are billed by the minute for the exact time spent in the zone. Registration is a one-time process,
-              wherein users access an online web application by scanning a QR-code on the sign.
+  - title: Context
+    colored: true
+    icon: bulb
+    data:
+      - type: paragraph
+        data: | 
+          Designated by purple curbs, SLZs employ innovative camera technology to read license plates and analyze
+          real-time curbside activity, automating payment for the time a vehicle spends at a purple curb. Registered
+          users are billed by the minute for the exact time spent in the zone. Registration is a one-time process,
+          wherein users access an online web application by scanning a QR-code on the sign.
 
   - title: Defining The Problem Space
     data:
@@ -105,7 +136,7 @@ sections:
         data: Our team utilized abstraction laddering to define the problem space. By analyzing various components of SLZs at various levels of abstraction from the concrete “how” to the abstract “why,” we realized that a number of our concerns centered around accessibility.
       
       - type: image
-        data: images/image6.svg
+        data: images/soemthing.png
 
       - type: paragraph
         data: "Particularly passionate about this space, we honed in on the following problem statement:" 
