--- a/src/assets/case-studies/SLZ.yaml
+++ b/src/assets/case-studies/SLZ.yaml
@@ -11,8 +11,10 @@ header:
   image: images/Frame31.svg
 sections:
   - title: Overview
+    color: blue
     data:
       - type: grid
+        padding: false
         data:
           - type: grid-item
             data:
@@ -44,13 +46,13 @@ sections:
                 data: Teammates
 
               - type: paragraph
-                data: |
-                  3 Product Designers
+                data: 3 Product Designers
 
       - type: sub-header
         data: Methods
 
       - type: grid
+        padding: false
         data:
           - type: grid-item
             data:
@@ -71,8 +73,7 @@ sections:
   - title: Context
     data:
       - type: paragraph
-        data: |
-          Smart Loading Zones (SLZs) are a government-sponsored initiative meant to provide delivery drivers with safe curb space, reduce traffic congestion, and lower emissions from idling cars in Pittsburgh, PA.
+        data: Smart Loading Zones (SLZs) are a government-sponsored initiative meant to provide delivery drivers with safe curb space, reduce traffic congestion, and lower emissions from idling cars in Pittsburgh, PA.
 
       - type: header
         data: |
@@ -99,8 +100,7 @@ sections:
           Recently, Vishal has noticed some purple curbs near some of his favorite eateries and the local shops he frequents. They have a sign nearby that tell him that these are “Smart Loading Zones,” that a person needs to register before using them, and that they utilize graduated pay-by-minute parking... WHAT!?
 
       - type: paragraph
-        data: |
-          He has no idea what these are and assumes that he can’t use the spots anymore. Now, Vishal is extremely frustrated that he needs to park nearly a block away and struggle to wheel-up the broken Pittsburgh sidewalks to pick up dinner. He’s desperately missing the days of storefront parking.
+        data: He has no idea what these are and assumes that he can’t use the spots anymore. Now, Vishal is extremely frustrated that he needs to park nearly a block away and struggle to wheel-up the broken Pittsburgh sidewalks to pick up dinner. He’s desperately missing the days of storefront parking.
 
       - type: image
         data: images/SLZ sign.png
@@ -133,21 +133,16 @@ sections:
           I conducted comprehensive desk research and discovered a growing confusion and unease surrounding the SLZ initiative.
 
       - type: paragraph
-        data: |
-          Referencing press releases issued by the city government, the official SLZ pamphlet put forth by the Pittsburgh parking authority, and other newspaper and social media material, I investigated both the nitty-gritty specifics of the program infrastructure as well as the general public’s sentiment towards it.
+        data: Referencing press releases issued by the city government, the official SLZ pamphlet put forth by the Pittsburgh parking authority, and other newspaper and social media material, I investigated both the nitty-gritty specifics of the program infrastructure as well as the general public’s sentiment towards it.
 
       - type: paragraph
-        data: |
-          These materials served to expose the government’s half-baked plan; specifically, I came across 20+ Reddit threads with unanswered civilian questions, critical (bordering on caustic) articles from local news outlets, no definite payment structure or enforcement specification, and most problematic -- a severe lack of clarity surrounding rules and regulations.
+        data: These materials served to expose the government’s half-baked plan; specifically, I came across 20+ Reddit threads with unanswered civilian questions, critical (bordering on caustic) articles from local news outlets, no definite payment structure or enforcement specification, and most problematic -- a severe lack of clarity surrounding rules and regulations.
 
       - type: spacer
 
       - type: image
+        caption: A Reddit post I found during a social media review, highlighting the growing confusion and unease surrounding SLZs.
         data: images/SLZ reddit post.png
-
-      - type: caption
-        data: |
-          A Reddit post I found during a social media review, highlighting the growing confusion and unease surrounding SLZs.
 
       - type: spacer
       - type: spacer
@@ -166,11 +161,9 @@ sections:
       - type: spacer
 
       - type: image
-        data: images/SLZ bodystorming.png
+        caption: Pictures of two SLZ locations I visited to bodystorm the experience and observe others.
 
-      - type: caption
-        data: |
-          Pictures of two SLZ locations I visited to bodystorm the experience and observe others.
+        data: images/SLZ bodystorming.png
 
       - type: spacer
       - type: spacer
@@ -187,15 +180,11 @@ sections:
           From the physical signage to the web application, I experienced a great deal of friction. Specifically, there were gaps in the information made available to users, confusing verbiage, and inconsistencies in policy.
 
       - type: paragraph
-        data: |
-          Because the Pittsburgh Parking Authority is launching a MVP, the user flow of the registration process is largely untested. Accordingly, my team and I saw the value in individually carrying out a heuristic evaluation of the interface. We then collapsed our individual findings, and prioritized the main violations that most critically impacted usability.
+        data: Because the Pittsburgh Parking Authority is launching a MVP, the user flow of the registration process is largely untested. Accordingly, my team and I saw the value in individually carrying out a heuristic evaluation of the interface. We then collapsed our individual findings, and prioritized the main violations that most critically impacted usability.
 
       - type: image
+        caption: A few examples of violations within the web application (left) and with the physical sign (right).
         data: images/SLZ heuristic evaluation.png
-
-      - type: caption
-        data: |
-          A few examples of violations within the web application (left) and with the physical sign (right).
 
       - type: spacer
       - type: spacer
@@ -212,29 +201,23 @@ sections:
           Reaching out to a vulnerable population is always tricky. Through multiple recruitment mediums, my team and I were able to speak to 5 disabled drivers. These drivers conveyed a limited knowledge, general distrust, and severe frustration/ concern with SLZs.
 
       - type: paragraph
-        data: |
-          Up until this point, my preliminary research hadn’t surfaced any specific sentiments regarding accessibility. To learn more about the disabled driver experience, we subsequently carried out 5 interviews with disabled drivers, operationalizing “disability” as individuals with permanent disabilities, temporary physical disabilities, and of older age (65+).
+        data: Up until this point, my preliminary research hadn’t surfaced any specific sentiments regarding accessibility. To learn more about the disabled driver experience, we subsequently carried out 5 interviews with disabled drivers, operationalizing “disability” as individuals with permanent disabilities, temporary physical disabilities, and of older age (65+).
 
       - type: paragraph
-        data: |
-          The objectives of the interviews were twofold. Firstly, we aimed to gain a comprehensive understanding of the accessibility of the SLZs, how individuals with various types of disabilities engage with them, and the specific situations in which they make use of these zones. Secondly, we sought to identify the challenges and difficulties encountered by these individuals, while also comparing their experiences with those in other parking zones across the city. I drafted the following testing and analysis plan.
+        data: The objectives of the interviews were twofold. Firstly, we aimed to gain a comprehensive understanding of the accessibility of the SLZs, how individuals with various types of disabilities engage with them, and the specific situations in which they make use of these zones. Secondly, we sought to identify the challenges and difficulties encountered by these individuals, while also comparing their experiences with those in other parking zones across the city. I drafted the following testing and analysis plan.
 
       - type: spacer
 
       - type: image
+        caption: I developed a comprehensive testing and analysis plan. This served as the basis for our interview guide, shaping the kinds of questions we asked, and the responses we aimed to get.
         data: images/SLZ interviews.svg
-
-      - type: caption
-        data: |
-          I developed a comprehensive testing and analysis plan. This served as the basis for our interview guide, shaping the kinds of questions we asked, and the responses we aimed to get.
 
       - type: spacer
       - type: spacer
       - type: spacer
 
       - type: paragraph
-        data: |
-          Our interviews revealed a wealth of findings, from which we synthesized the following four primary insights:
+        data: "Our interviews revealed a wealth of findings, from which we synthesized the following four primary insights:"
 
       - type: spacer
 
@@ -323,19 +306,15 @@ sections:
       - type: spacer
 
       - type: image
+        caption: A snapshot of one round of Crazy 8’s experimenting with ideas like an automated ramp, an informational pamphlet, a revised payment structure, and more.
         data: images/SLZ crazy 8.png
-
-      - type: caption
-        data: |
-          A snapshot of one round of Crazy 8’s experimenting with ideas like an automated ramp, an informational pamphlet, a revised payment structure, and more.
 
       - type: spacer
       - type: spacer
       - type: spacer
 
       - type: paragraph
-        data: |
-          Using our Crazy 8’s as inspiration, we drafted a number of storyboards illustrating ideas such as incorporating conventional forms of payment (like parking meters), adjusting sign heights, linking license plates with bank accounts, automatic adjustment of parking rates, doctor-issued disability verification stickers, and many others.
+        data: Using our Crazy 8’s as inspiration, we drafted a number of storyboards illustrating ideas such as incorporating conventional forms of payment (like parking meters), adjusting sign heights, linking license plates with bank accounts, automatic adjustment of parking rates, doctor-issued disability verification stickers, and many others.
 
   - title: Storyboarding
     colored: true
@@ -352,13 +331,10 @@ sections:
       - type: spacer
 
       - type: image
+        caption: An example of a storyboard illustrating a low psychological risk solution to address the user need identified above.
         data: images/SLZ storyboard.svg
 
       - type: spacer
-
-      - type: caption
-        data: |
-          An example of a storyboard illustrating a low psychological risk solution to address the user need identified above.
 
   - title: Honing in on design opportunities
     data:
@@ -373,6 +349,7 @@ sections:
         data:
           - type: grid-item
             color: "#395996"
+            text-color: "#ffffff"
             data:
               - type: paragraph
                 color: "#ffffff"
@@ -380,20 +357,20 @@ sections:
                   A signage redesign with information split across 2 signs to convey more clearly how SLZs work.
 
           - type: grid-item
+            text-color: "#ffffff"
             color: "#92A5CB"
             data:
               - type: paragraph
                 color: "#ffffff"
-                data: |
-                  An onboarding process that is meant to introduce individuals to the initiative.
+                data: An onboarding process that is meant to introduce individuals to the initiative.
 
           - type: grid-item
+            text-color: "#ffffff"
             color: "#395996"
             data:
               - type: paragraph
                 color: "#ffffff"
-                data: |
-                  An application for disability accommodations nestled within the existing registration process.
+                data: An application for disability accommodations nestled within the existing registration process.
 
   - title: Testing
     data:
@@ -402,8 +379,7 @@ sections:
           We conducted intercept testing with lo-fi prototypes, and learned that participants found the two signs helpful, but overwhelming and wanted to skip the onboarding altogether. Participants most appreciated applying for rate accommodations.
 
       - type: paragraph
-        data: |
-          To ensure standardization across usability testing, we identified three primary tasks to test, and defined goals and success metrics for each.
+        data: To ensure standardization across usability testing, we identified three primary tasks to test, and defined goals and success metrics for each.
 
       - type: spacer
       - type: spacer
@@ -416,12 +392,9 @@ sections:
       - type: spacer
 
       - type: image
+        caption: Intercept testing & guerrilla research with a prototype of two signs (left) and of an onboarding process (middle). A paper prototype of a potential flow for applying for disability accommodations within the web application (right).
         data: images/SLZ prototype testing.svg
 
-      - type: caption
-        data: |
-          Intercept testing & guerrilla research with a prototype of two signs (left) and of an onboarding process (middle). A paper prototype of a potential flow for applying for disability accommodations within the web application (right).
-
       - type: spacer
       - type: spacer
       - type: spacer
@@ -432,15 +405,13 @@ sections:
             color: "#EDFCF2"
             data:
               - type: paragraph
-                data: |
-                  On the sign, 67% of users found the separation of sections useful in teasing apart different facets of the SLZ implementation.
+                data: On the sign, 67% of users found the separation of sections useful in teasing apart different facets of the SLZ implementation.
 
           - type: grid-item
             color: "#FCEBEB"
             data:
               - type: paragraph
-                data: |
-                  Participants expressed confusion around the two signs. Drivers must prioritize their attention and would likely only be able to focus on one sign when deciding to park.
+                data: Participants expressed confusion around the two signs. Drivers must prioritize their attention and would likely only be able to focus on one sign when deciding to park.
 
       - type: grid
         data:
@@ -448,15 +419,13 @@ sections:
             color: "#EDFCF2"
             data:
               - type: paragraph
-                data: |
-                  Users appreciated the illustrations on the onboarding screens, commenting that they felt “welcomed,” that there was “good contrast,” and that they “easily understood how the process works.”
+                data: Users appreciated the illustrations on the onboarding screens, commenting that they felt “welcomed,” that there was “good contrast,” and that they “easily understood how the process works.”
 
           - type: grid-item
             color: "#FCEBEB"
             data:
               - type: paragraph
-                data: |
-                  78% of users mentioned that they would skip the onboarding process altogether.
+                data: 78% of users mentioned that they would skip the onboarding process altogether.
 
       - type: grid
         data:
@@ -464,8 +433,7 @@ sections:
             color: "#EDFCF2"
             data:
               - type: paragraph
-                data: |
-                  All users successfully completed the application process for disability accommodations within the Automotus app.
+                data: All users successfully completed the application process for disability accommodations within the Automotus app.
 
           - type: grid-item
             color:
@@ -479,8 +447,7 @@ sections:
             color: "#EDFCF2"
             data:
               - type: paragraph
-                data: |
-                  Participants conveyed that the user flow of the registration process was intuitive and easy to understand.
+                data: Participants conveyed that the user flow of the registration process was intuitive and easy to understand.
           - type: grid-item
             data:
               - type: paragraph
@@ -556,10 +523,8 @@ sections:
         data: |
           We presented our final recommendation to folks at the City of Pittsburgh Parking Authority. Specifically, to streamline the experience of users with disabilities, we proposed  integrating a short user flow that occurs at the end of the registration process and allows drivers with disabilities the opportunity to apply for financial and time accommodations by scanning or inputting their handicap placard identification number into the system.
 
-      - type: paragraph
-        data: |
+          
           If approved, this feature automatically applies a reduced rate for users with disabilities, reducing the urge to rush and potentially harm an already vulnerable body.
 
-      - type: paragraph
-        data: |
+          
           Our proposed solution is extremely practical due to its necessity and urgency. We recommend leveraging existing accommodative systems like handicap placards to improve accessibility rather than introducing something new. In such a way, we aim to optimize ease of implementation, while greatly improving accessibility for SLZ users.
