--- a/src/assets/case-studies/PNC.yaml
+++ b/src/assets/case-studies/PNC.yaml
@@ -11,10 +11,13 @@ header:
   image:
 sections:
   - title: Overview
+    color: "#7B6251"
     data:
       - type: grid
+        padding: false
         data:
           - type: grid-item
+            text-color: "#ffffff"
             data:
               - type: sub-header
                 data: Role
@@ -23,6 +26,7 @@ sections:
                 data: Research & Design Lead
 
           - type: grid-item
+            text-color: "#ffffff"
             data:
               - type: sub-header
                 data: Client
@@ -31,6 +35,7 @@ sections:
                 data: PNC Bank
 
           - type: grid-item
+            text-color: "#ffffff"
             data:
               - type: sub-header
                 data: Project Timeline
@@ -39,6 +44,7 @@ sections:
                 data: Jan 2024 - Apr 2024
 
           - type: grid-item
+            text-color: "#ffffff"
             data:
               - type: sub-header
                 data: Teammates
@@ -53,8 +59,10 @@ sections:
         data: Methods
 
       - type: grid
+        padding: false
         data:
           - type: grid-item
+            text-color: "#ffffff"
             data:
               - type: small-sub-header
                 data: Research
@@ -63,6 +71,7 @@ sections:
                 data: Competitive Analysis / Market Research / Directed Storytelling / User Interviews / Surveys / Quantitative Data Analysis /Affinity Diagramming
 
           - type: grid-item
+            text-color: "#ffffff"
             data:
               - type: small-sub-header
                 data: Design
@@ -236,11 +245,8 @@ sections:
           - type: grid-item
             data:
               - type: image
+                caption: Questions were coded with whether they measure “willingness” or “awareness.” Averages were computed based on responses given on a 5-point Likert scale.
                 data: images/PNC awareness graph.svg
-
-              - type: caption
-                data: |
-                  Questions were coded with whether they measure “willingness” or “awareness.” Averages were computed based on responses given on a 5-point Likert scale.
 
       - type: grid
         color: "#FAF7F4"
@@ -260,11 +266,8 @@ sections:
           - type: grid-item
             data:
               - type: image
+                caption: Questions probed comfortability sharing different forms of personal information on a 5-point Likert scale. Percentage respondents was calculated as the number of respondents selecting a response divided by the total number of respondents.
                 data: images/PNC sharing graph.svg
-
-              - type: caption
-                data: |
-                  Questions probed comfortability sharing different forms of personal information on a 5-point Likert scale. Percentage respondents was calculated as the number of respondents selecting a response divided by the total number of respondents.
 
       - type: grid
         color: "#FAF7F4"
@@ -284,43 +287,43 @@ sections:
           - type: grid-item
             data:
               - type: image
+                caption: A multi-select question allowed respondents to select all the resources they foresee themselves requiring in the future. Percentage respondents was calculated as the number of respondents selecting a response divided by the total number of respondents.
                 data: images/PNC overconfidence graph.svg
-
-              - type: caption
-                data: |
-                  A multi-select question allowed respondents to select all the resources they foresee themselves requiring in the future. Percentage respondents was calculated as the number of respondents selecting a response divided by the total number of respondents.
 
   - title: Using these insights, we concretely synthesized major pain points
     data:
+      - type: spacer
+      - type: spacer
+
       - type: grid
         data:
           - type: grid-item
             color: "#7B6251"
+            text-color: "#ffffff"
             data:
               - type: paragraph
-                data: |
-                  Adult children are typically not involved in their parents’ finances until a trigger event occurs.
+                data: Adult children are typically not involved in their parents’ finances until a trigger event occurs.
 
           - type: grid-item
             color: "#B2A49A"
+            text-color: "#ffffff"
             data:
               - type: paragraph
-                data: |
-                  Both adult children and aging parents are often uncertain about what to plan for and what help/services they will need.
+                data: Both adult children and aging parents are often uncertain about what to plan for and what help/services they will need.
 
           - type: grid-item
             color: "#7B6251"
+            text-color: "#ffffff"
             data:
               - type: paragraph
-                data: |
-                  There is a lack of awareness about options for financial planning for retirement.
+                data: There is a lack of awareness about options for financial planning for retirement.
 
           - type: grid-item
             color: "#B2A49A"
+            text-color: "#ffffff"
             data:
               - type: paragraph
-                data: |
-                  There is a general reluctance to think about aging, leading to cursory financial planning.
+                data: There is a general reluctance to think about aging, leading to cursory financial planning.
 
   - title: Ideation
     data:
@@ -344,11 +347,8 @@ sections:
       - type: spacer
 
       - type: image
+        caption: A solution matrix with all the proposed feature solutions on the left, and the market segments on the right. Green checks signify a customer need being met, while red crosses signify a solution that is not optimal, not necessary, or not useful.
         data: images/PNC solution matrix.svg
-
-      - type: caption
-        data: |
-          A solution matrix with all the proposed feature solutions on the left, and the market segments on the right. Green checks signify a customer need being met, while red crosses signify a solution that is not optimal, not necessary, or not useful.
 
       - type: spacer
       - type: spacer
@@ -368,11 +368,8 @@ sections:
       - type: spacer
 
       - type: image
+        caption: A rough overview of the major pros and cons of existing financial planning tools and calculators., drawn from a thorough competitive analysis of industry leaders in financial products and services.
         data: images/PNC competitive analysis.svg
-
-      - type: caption
-        data: |
-          A rough overview of the major pros and cons of existing financial planning tools and calculators., drawn from a thorough competitive analysis of industry leaders in financial products and services.
 
       - type: spacer
       - type: spacer
@@ -393,8 +390,7 @@ sections:
           With this positioning statement in mind, we began by developing a series of storyboards to envision how RetireReady might fit into our users' lives.
 
       - type: sub-header
-        data: |
-          66% of target users we spoke to saw the value in RetireReady and believed that it would be something that they would use to track their financial progress.
+        data: 66% of target users we spoke to saw the value in RetireReady and believed that it would be something that they would use to track their financial progress.
 
       - type: spacer
       - type: spacer
@@ -406,15 +402,13 @@ sections:
             color: "#EDFCF2"
             data:
               - type: paragraph
-                data: |
-                  88% of users conveyed that they would trust the results because RetireReady is situated within PNC’s existing ecosystem of tools, and PNC is a reliable brand.
+                data: 88% of users conveyed that they would trust the results because RetireReady is situated within PNC’s existing ecosystem of tools, and PNC is a reliable brand.
 
           - type: grid-item
             color: "#FCEBEB"
             data:
               - type: paragraph
-                data: |
-                  33% of users mentioned that they had seen similar tools online, and they didn’t know how this was any different than those tools.
+                data: 33% of users mentioned that they had seen similar tools online, and they didn’t know how this was any different than those tools.
 
       - type: grid
         data:
@@ -422,15 +416,13 @@ sections:
             color: "#EDFCF2"
             data:
               - type: paragraph
-                data: |
-                  55% of users mentioned that they would use RetireReady as their primary means of planning for unexpected circumstances.
+                data: 55% of users mentioned that they would use RetireReady as their primary means of planning for unexpected circumstances.
 
           - type: grid-item
             color: "#FCEBEB"
             data:
               - type: paragraph
-                data: |
-                  55% of users commented that they would be wary of disclosing too much personal information in the survey.
+                data: 55% of users commented that they would be wary of disclosing too much personal information in the survey.
 
       - type: grid
         data:
@@ -438,22 +430,19 @@ sections:
             color: "#EDFCF2"
             data:
               - type: paragraph
-                data: |
-                  44% of users mentioned that they would be interested in PNC’s suggested offerings, and would use those recommendations to invest, or subscribe to different platforms.
+                data: 44% of users mentioned that they would be interested in PNC’s suggested offerings, and would use those recommendations to invest, or subscribe to different platforms.
 
           - type: grid-item
             color: "#FCEBEB"
             data:
               - type: paragraph
-                data: |
-                  22% of users stated that they would need to know how the AI is working on the back-end to trust the results.
+                data: 22% of users stated that they would need to know how the AI is working on the back-end to trust the results.
 
       - type: spacer
       - type: spacer
 
       - type: header
-        data: |
-          Our design needs to make the “blackbox” more transparent and accessible. Moreover, our marketing strategy needs to highlight the differentiating factor between RetireReady and competitors — the consideration of ALL health-related costs.
+        data: Our design needs to make the “blackbox” more transparent and accessible. Moreover, our marketing strategy needs to highlight the differentiating factor between RetireReady and competitors — the consideration of ALL health-related costs.
 
   - title: Prototyping
     data:
@@ -468,102 +457,52 @@ sections:
               - type: numbers
                 data: "01"
 
-              - type: sub-header
-                data: Onboarding Survey
+              - type: paragraph
+                data: A comprehensive information-gathering survey to ensure maximum accuracy of financial projections.
 
               - type: spacer
+              - type: spacer
 
-              - type: paragraph
-                data: Comprehensive information-gathering survey to ensure maximum accuracy of financial projections.
-
-              - type: grid
-                data:
-                  - type: grid-item
-                    color: "#FAFAFA"
-                    data:
-                      - type: graphic-text
-                        data: |
-                          Optional fields to increase comfort
-
-              - type: grid
-                data:
-                  - type: grid-item
-                    color: "#FAFAFA"
-                    data:
-                      - type: graphic-text
-                        data: |
-                          Persuasive messaging to encourage survey completion
-
-              - type: grid
-                data:
-                  - type: grid-item
-                    color: "#FAFAFA"
-                    data:
-                      - type: graphic-text
-                        data: |
-                          Compliance with HIPAA + data security regulations
-
-              - type: grid
-                data:
-                  - type: grid-item
-                    color: "#FAFAFA"
-                    data:
-                      - type: graphic-text
-                        data: |
-                          Progress bars to provide system status
+              - type: sub-header
+                data: "Create a mutually-beneficial feedback loop: increase training set size and improve predictive accuracy by ~15%."
 
           - type: grid-item
             data:
               - type: image
+                caption: |
+                  In order to increase user comfort with sharing medical information, we added disclaimers compliant with HIPAA and other data security regulations. Moreover, we made any sensitive fields optional.
+                  We used persuasive messaging and progress bars to encourage survey completion.
                 data: images/PNC onboarding.png
 
+  - title:
+    color: "#F3EAE3"
+    data:
       - type: grid
         data:
-          - type: grid-item
-            data:
-              - type: image
-                data: images/PNC predictive analytics.png
-
           - type: grid-item
             data:
               - type: numbers
                 data: "02"
 
-              - type: sub-header
-                data: Predictive Analytics
+              - type: paragraph
+                data: Interactive visualization of expected financial trajectory over time (as per monte-carlo simulations).
 
               - type: spacer
+              - type: spacer
 
-              - type: paragraph
-                data: Interactive visualization of expected financial trajectory over time (monte-carlo simulations).
+              - type: sub-header
+                data: Differentiate RetireReady from competitors in the market. Bring in an estimated $4.3M in revenue in the first year of launch.
 
-              - type: grid
-                data:
-                  - type: grid-item
-                    color: "#FAFAFA"
-                    data:
-                      - type: graphic-text
-                        data: |
-                          In-house and external partnership based PNC product recommendations
+          - type: grid-item
+            data:
+              - type: image
+                caption: |
+                  To better align with positioning statement, we focused in on RetireReady’s differentiating factor: medical expense projections and ADLS recommendations. 
+                  We additionally added call to actions to PNC product recommendations (external partnerships, investment products, & 1-on-1 advisory services).
+                data: images/PNC projection breakdown.png
 
-              - type: grid
-                data:
-                  - type: grid-item
-                    color: "#FAFAFA"
-                    data:
-                      - type: graphic-text
-                        data: |
-                          Generate revenue through partnerships, investment products, & 1-on-1 advisory services
-
-              - type: grid
-                data:
-                  - type: grid-item
-                    color: "#FAFAFA"
-                    data:
-                      - type: graphic-text
-                        data: |
-                          Quick, hoverable graph provides overview of trajectory and call to action to learn more
-
+  - title:
+    data:
       - type: grid
         data:
           - type: grid-item
@@ -571,95 +510,26 @@ sections:
               - type: numbers
                 data: "03"
 
-              - type: sub-header
-                data: Projection Breakdown
-
-              - type: spacer
-
-              - type: paragraph
-                data: Detailed breakdown of all expected expenses based on insurance policies, and current market trends.
-
-              - type: grid
-                data:
-                  - type: grid-item
-                    color: "#FAFAFA"
-                    data:
-                      - type: graphic-text
-                        data: |
-                          Call to action with personalized PNC product recommendations
-
-              - type: grid
-                data:
-                  - type: grid-item
-                    color: "#FAFAFA"
-                    data:
-                      - type: graphic-text
-                        data: |
-                          Transparent overview of the predictive variables involved in the ML output
-
-              - type: grid
-                data:
-                  - type: grid-item
-                    color: "#FAFAFA"
-                    data:
-                      - type: graphic-text
-                        data: |
-                          Specific focus on health predictions and ADLS service recommendations
-
-          - type: grid-item
-            data:
-              - type: image
-                data: images/PNC projection breakdown.png
-
-      - type: grid
-        data:
-          - type: grid-item
-            data:
-              - type: image
-                data: images/PNC expense tracking.png
-
-          - type: grid-item
-            data:
-              - type: numbers
-                data: "04"
-
-              - type: sub-header
-                data: Expense Tracking
-
-              - type: spacer
-
               - type: paragraph
                 data: Keep record of general expenses and log unexpected ones to map out new trajectories.
 
-              - type: grid
-                data:
-                  - type: grid-item
-                    color: "#FAFAFA"
-                    data:
-                      - type: graphic-text
-                        data: |
-                          Dynamic tool that changes in concert with users’ needs
+              - type: spacer
+              - type: spacer
 
-              - type: grid
-                data:
-                  - type: grid-item
-                    color: "#FAFAFA"
-                    data:
-                      - type: graphic-text
-                        data: |
-                          Utilize multiple permissions to enable collaborative financial planning and information sharing
+              - type: sub-header
+                data: With expense tracking, increase engagement, potential conversions, and ensure more frequent checking of status.
 
-              - type: grid
-                data:
-                  - type: grid-item
-                    color: "#FAFAFA"
-                    data:
-                      - type: graphic-text
-                        data: |
-                          Link bank accounts and other documents to consolidate all financial information in a singular hub
+          - type: grid-item
+            data:
+              - type: image
+                caption: |
+                  User interviews and surveys revealed that users were drawn to the concept of a “centralized repository” of important financial, legal, and medical documentation.
+                  Accordingly, we visualized the PNC portal as a hub, wherein all information can be stored and shared with trusted individuals.
+                data: images/PNC expense tracking.png
 
   - title: Our recommendation
-    colored: true
+    color: "#7B6251"
+    text-color: "#ffffff"
     data:
       - type: paragraph
         data: |
