--- a/src/assets/case-studies/03_SLZ.yaml
+++ b/src/assets/case-studies/03_SLZ.yaml
@@ -497,6 +497,7 @@ sections:
 
   - title: Our recommendation
     color: "#395996"
+    text-color: "#ffffff"
     data:
       - type: paragraph
         color: "#ffffff"
